--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lanf="fr">
   <head>
-    <title>MyUrbanLab</title>
+    <title>MyUrbanLab | Accueil</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <nav>
-	<span id="Logo"><strong>MyUrbanLab</strong></span>
+	<span id="Logo"><a href="index.html"><strong>MyUrbanLab</strong></a></span>
 	<div id="navbar">
 		<a href="">Charts</a>
 		<a href="">Decouvrir</a>
 		<a href="">Store</a>
 		<a href="">Forfaits</a>
-		<a href="">A propos de nous</a>
+		<a href="aboutus.html">A propos de nous</a>
 	</div>
 	<div id="navinsc">
 		<button>Inscription</button>
@@ -24,8 +24,8 @@
 		<img src="mail.png" />
 	</div>
     </nav>
-<div id="content">
-	<section id="first">
+<div class="content">
+	<section class="first">
 		<div id = "diapo"></div>
 		<div id = "classement"></div>
 	</section>
