--- a/aboutus.html
+++ b/aboutus.html
@@ -195,6 +195,10 @@
 		</section>
 	</section>
 	
-<footer></footer>
+<footer>
+	<div class="foot"></div>
+	<div class="foot"></div>	
+	<div class="foot"></div>	
+</footer>
   </body>
 </html>
