--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   			</div>
 		</div>
 	</div>
-	<h2>Videos</h2>
+	<h2>Albums</h2>
 	<div class="cartes">
 		<div class="card">
   			<img src="camera.jpg" alt="Avatar" style="width:100%">
@@ -240,6 +240,21 @@
 	</div>
 	<div id="divers"></div>
 </section>
-<footer></footer>
+<footer>
+	<div class="foot2"><h1>Newsletter</h1><input type="email"><h1>Nous Suivre</h1>
+	<div><img src="face.png"/> <img src="insta.png"/> <img src="google.png"/><img src="twit.png"/></div>
+	<p>MyUrbanLab &copy; 2018 ALL RIGHTS RESERVED</p>
+	</div>
+	<div class="foot2"><h1>Contacts</h1><p>Yaounde, Cameroun</p><p>Tel: (+237) 655287113/ 699967512</p><p>Email: myurbanlab@gmail.com</p>
+	
+	</div>
+	<div class="foot2">
+		<a href="">Charts</a>
+		<a href="">Decouvrir</a>
+		<a href="">Store</a>
+		<a href="">Forfaits</a>
+		<a href="aboutus.html">A propos de nous</a>	
+	</div>
+</footer>
   </body>
 </html>
