--- a/aboutus.html
+++ b/aboutus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lanf="fr">
+<html lang="fr">
   <head>
     <title>MyUrbanLab | A propos</title>
     <link rel="stylesheet" href="style.css"/>
@@ -196,9 +196,20 @@
 	</section>
 	
 <footer>
-	<div class="foot"></div>
-	<div class="foot"></div>	
-	<div class="foot"></div>	
+	<div class="foot2"><h1>Newsletter</h1><input type="email"><h1>Nous Suivre</h1>
+	<div><img src="face.png"/> <img src="insta.png"/> <img src="google.png"/><img src="twit.png"/></div>
+	<p>MyUrbanLab &copy; 2018 ALL RIGHTS RESERVED</p>
+	</div>
+	<div class="foot2"><h1>Contacts</h1><p>Yaounde, Cameroun</p><p>Tel: (+237) 655287113/ 699967512</p><p>Email: myurbanlab@gmail.com</p>
+	
+	</div>
+	<div class="foot2">
+		<a href="">Charts</a>
+		<a href="">Decouvrir</a>
+		<a href="">Store</a>
+		<a href="">Forfaits</a>
+		<a href="aboutus.html">A propos de nous</a>	
+	</div>
 </footer>
   </body>
 </html>
